--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 *{
-  font-weight: bold !important;
+   font-weight:large !important;
+  font-family:cursive  !important;
 }
 body {
  font-size: large;
